--- a/lang_sam_nav/CMakeLists.txt
+++ b/lang_sam_nav/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
@@ -33,6 +34,7 @@ ament_target_dependencies(lane_following_node
   rclcpp
   sensor_msgs
   geometry_msgs
+  std_msgs
   nav_msgs
   cv_bridge
   image_transport
